# CityEvent_FastAPI_PostgreSQL

./: .gitattributes  .gitignore  README.md  pyproject.toml  seed.py
app/: config.py  main.py
app/api/: routes_event.py
app/crud/: event.py
app/db/: init_db.py  session.py
app/models/: event.py
app/schemas/: event.py
app/utils/: logger.py  populate.py
